# sdl-pong

./: CMakeLists.txt
src/: App.cpp  App.hpp  Main.cpp
